--- a/app/src/main/res/layout/activity_pilihpengunjung.xml
+++ b/app/src/main/res/layout/activity_pilihpengunjung.xml
@@ -271,7 +271,7 @@
         </androidx.cardview.widget.CardView>
 
         <Button
-            android:id="@+id/btnSimpanPengunjung"
+            android:id="@+id/btnSimpan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Simpan"
