--- a/app/src/main/res/layout/activity_tirta.xml
+++ b/app/src/main/res/layout/activity_tirta.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F2F2F2">
@@ -26,8 +27,8 @@
                 android:layout_margin="20dp"
                 android:background="@drawable/bg_circle_white"
                 android:src="@drawable/arrow_back"
-                android:tint="#009688"
-                android:scaleType="centerInside" />
+                android:scaleType="centerInside"
+                app:tint="#009688" />
 
             <!-- Gambar Header -->
             <ImageView
@@ -52,6 +53,7 @@
 
                 <!-- Nama Wisata -->
                 <TextView
+                    android:id="@+id/tvNamaWisata"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Sri Tanjung Wisata Tirta"
@@ -61,6 +63,7 @@
 
                 <!-- Lokasi -->
                 <TextView
+                    android:id="@+id/tvLokasi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
@@ -79,6 +82,7 @@
 
                 <!-- Deskripsi -->
                 <TextView
+                    android:id="@+id/tvDeskripsi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
@@ -95,10 +99,11 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/tvHargaTiket"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:text="Dewasa : 10.000\nAnak-anak <10th : 7.000"
+                    android:text="Dewasa : 10.000&#10;Anak-anak : 7.000"
                     android:textColor="#555" />
 
                 <!-- Fasilitas -->
@@ -111,6 +116,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/tvFasilitas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
