--- a/app/src/main/res/layout/activity_goamargotresno.xml
+++ b/app/src/main/res/layout/activity_goamargotresno.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F2F2F2">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="55dp" />
-
+    <!-- Scrollable Content -->
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/btnPesan">
@@ -18,16 +17,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Tombol kembali -->
-            <ImageButton
-                android:id="@+id/btnBack"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_margin="20dp"
-                android:background="@drawable/bg_circle_white"
-                android:src="@drawable/arrow_back"
-                android:tint="#009688"
-                android:scaleType="centerInside" />
+            <!-- Celah atas supaya header tidak tertutup -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="70dp" />
 
             <!-- Gambar Wisata -->
             <ImageView
@@ -36,10 +29,10 @@
                 android:layout_height="170dp"
                 android:layout_marginHorizontal="16dp"
                 android:adjustViewBounds="true"
-                android:background="@drawable/image_rounded"
                 android:scaleType="centerCrop"
-                android:src="@drawable/wisata_goa_margotresno"
-                android:clipToOutline="true"/>
+                android:background="@drawable/image_rounded"
+                android:clipToOutline="true"
+                android:src="@drawable/wisata_goa_margotresno" />
 
             <!-- Card Detail -->
             <LinearLayout
@@ -51,8 +44,9 @@
                 android:background="@drawable/bg_card"
                 android:elevation="4dp">
 
-                <!-- Judul -->
+                <!-- Judul Wisata -->
                 <TextView
+                    android:id="@+id/tvNamaWisata"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Goa Margo Tresno"
@@ -62,6 +56,7 @@
 
                 <!-- Lokasi -->
                 <TextView
+                    android:id="@+id/tvLokasi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
@@ -80,6 +75,7 @@
 
                 <!-- Deskripsi -->
                 <TextView
+                    android:id="@+id/tvDeskripsi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
@@ -96,6 +92,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/tvHargaTiket"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
@@ -112,6 +109,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/tvFasilitas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
@@ -136,4 +134,19 @@
         android:backgroundTint="#0BB5A7"
         android:layout_margin="16dp" />
 
+    <!-- Tombol Kembali (Back) di atas semua layout -->
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/bg_circle_white"
+        android:src="@drawable/arrow_back"
+        android:scaleType="centerInside"
+        app:tint="#009688"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:clickable="true"
+        android:focusable="true"
+        android:elevation="10dp"/>
 </RelativeLayout>
