--- a/app/src/main/res/layout/activity_riwayat.xml
+++ b/app/src/main/res/layout/activity_riwayat.xml
@@ -11,7 +11,7 @@
     <!-- Header -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="95dp"
         android:background="@drawable/header_rounded"
         android:padding="16dp"
         android:gravity="center_vertical">
