--- a/app/src/main/res/layout/activity_pemesanan.xml
+++ b/app/src/main/res/layout/activity_pemesanan.xml
@@ -111,7 +111,7 @@
                 android:textColorHint="#9E9E9E"
                 android:textSize="14sp" />
 
-            <ImageButton
+            <Button
                 android:id="@+id/btnCalendar"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
