--- a/app/src/main/res/layout/activity_pemesanan.xml
+++ b/app/src/main/res/layout/activity_pemesanan.xml
@@ -23,8 +23,8 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/ivBack"
+            <ImageButton
+                android:id="@+id/btnBack"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:contentDescription="Kembali"
