--- a/app/src/main/res/layout/activity_goamargotresno.xml
+++ b/app/src/main/res/layout/activity_goamargotresno.xml
@@ -32,7 +32,7 @@
                 android:scaleType="centerCrop"
                 android:background="@drawable/image_rounded"
                 android:clipToOutline="true"
-                android:src="@drawable/wisata_goa_margotresno" />
+                android:src="@drawable/default_wisata" />
 
             <!-- Card Detail -->
             <LinearLayout
