--- a/app/src/main/res/layout/activity_sedudo.xml
+++ b/app/src/main/res/layout/activity_sedudo.xml
@@ -41,7 +41,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/wisata_air_terjun_sedudo"
+                android:src="@drawable/default_wisata"
                 android:background="@drawable/image_rounded"
                 android:clipToOutline="true" />
 
