--- a/app/src/main/res/layout/activity_tirta.xml
+++ b/app/src/main/res/layout/activity_tirta.xml
@@ -39,7 +39,7 @@
                 android:adjustViewBounds="true"
                 android:background="@drawable/image_rounded"
                 android:scaleType="centerCrop"
-                android:src="@drawable/wisata_sritanjung"
+                android:src="@drawable/default_wisata"
                 android:clipToOutline="true"/>
 
             <LinearLayout
