--- a/app/src/main/res/layout/activity_sedudo.xml
+++ b/app/src/main/res/layout/activity_sedudo.xml
@@ -5,19 +5,6 @@
     android:layout_height="match_parent"
     android:background="#F2F2F2">
 
-    <!-- Tombol back -->
-    <ImageButton
-        android:id="@+id/btnBack"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="20dp"
-        android:background="@drawable/bg_circle_white"
-        android:src="@drawable/arrow_back"
-        android:scaleType="centerInside"
-        app:tint="#009688"
-        android:clickable="true"
-        android:focusable="true" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -143,5 +130,18 @@
         android:textSize="16sp"
         android:backgroundTint="#0BB5A7"
         android:layout_margin="16dp" />
+
+    <!-- Tombol back diletakkan paling akhir supaya di atas semua view -->
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/bg_circle_white"
+        android:src="@drawable/arrow_back"
+        android:scaleType="centerInside"
+        app:tint="#009688"
+        android:clickable="true"
+        android:focusable="true" />
 
 </RelativeLayout>
