feat: Add initial RegisterActivity class
Adds the `RegisterActivity.java` file with an empty class definition.

--- a/app/src/main/res/layout/item_riwayat_card.xml
+++ b/app/src/main/res/layout/item_riwayat_card.xml
@@ -64,7 +64,7 @@
                 android:id="@+id/tv_total_harga"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Tiket : Rp. 00000"
+                android:text="Total : Rp. 00000"
                 android:textColor="#333333"
                 android:textSize="14sp"
                 android:textStyle="bold"
