--- a/app/src/main/res/layout/activity_riwayat.xml
+++ b/app/src/main/res/layout/activity_riwayat.xml
@@ -5,35 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#F5F5F5"
+    android:background="#F0F3F8"
     tools:context=".RiwayatActivity">
 
-    <!-- Header -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="95dp"
+        android:layout_height="115dp"
         android:background="@drawable/header_rounded"
-        android:padding="16dp"
-        android:gravity="center_vertical">
+        android:gravity="bottom"
+        android:orientation="vertical"
+        android:paddingStart="16dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="16dp">
 
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/logo_nganjuk_abirupa"
-            android:contentDescription="@string/app_name" />
-
-        <TextView
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginStart="16dp"
-            android:text="Riwayat Pesanan"
-            android:textSize="18sp"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold" />
+            android:gravity="start"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="69dp"
+                android:layout_height="52dp"
+                android:layout_marginBottom="4dp"
+                android:contentDescription="@string/app_name"
+                android:scaleType="fitCenter"
+                android:src="@drawable/logotextputih" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="Riwayat Pesanan"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
 
-    <!-- RecyclerView untuk daftar riwayat -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewRiwayat"
         android:layout_width="match_parent"
@@ -43,7 +53,6 @@
         android:clipToPadding="false"
         android:scrollbars="vertical" />
 
-    <!-- Bottom Navigation Bar -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
